versioned_docs/version-3.14.0/guides/built-ins/built-ins.mdx
---
id: "built-ins"
slug: "/guides/built-ins"
title: "Built-ins"
---

import * as Functions from "./functions/index";
import * as Actions from "./actions/index";

One of the key advantages of using Reviewpad is that you can access a set of built-in functions and actions that allow flexible specifications and actions.

## Functions

---

Reviewpad functions allow to query data from a `pull request` or `organization` in order to act on it.

The functions are organized into 4 categories:

-   **[Pull Request](#pull-request)** - Functions to query pull request data.
-   **[Organization](#organization)** - Functions to query organization data.
-   **[User](#user)** - Functions to query user's data.
-   **[Utilities](#utilities)** - Functions to help act on the queried data.
-   **[Engine](#engine)** - Functions used to work with `reviewpad.yml` file.

## Pull Request

---

Set of functions to get pull request details.

### assignees

---

<Functions.Assignees />

### author

---

<Functions.Author />

### base

---

<Functions.Base />

### changed

---

<Functions.Changed />

### commentCount

---

<Functions.CommentCount />

### comments

---

<Functions.Comments />

### commitCount

---

<Functions.CommitCount />

### commits

---

<Functions.Commits />

### createdAt

---

<Functions.CreatedAt />

### description

---

<Functions.Description />

### fileCount

---

<Functions.FileCount />

### hasAnnotation

---

<Functions.HasAnnotation />

### hasCodePattern

---

<Functions.HasCodePattern />

### hasFileExtensions

---

<Functions.HasFileExtensions />

### hasFileName

---

<Functions.HasFileName />

### hasFilePattern

---

<Functions.HasFilePattern />

### hasGitConflicts

---

<Functions.HasGitConflicts />

### hasLinearHistory

---

<Functions.HasLinearHistory />

### hasLinkedIssues

---

<Functions.HasLinkedIssues />

### hasRequiredApprovals

---

<Functions.HasRequiredApprovals />

### hasUnaddressedThreads

---

<Functions.HasUnaddressedThreads />

### head

---

<Functions.Head />

### isDraft

---

<Functions.IsDraft />

### isWaitingForReview

---

<Functions.IsWaitingForReview />

### labels

---

<Functions.Labels />

### lastEventAt

---

<Functions.LastEventAt />

### milestone

---

<Functions.Milestone />

### requestedReviewers

---

<Functions.RequestedReviewers />

### reviewers

---

<Functions.Reviewers />

### reviewerStatus

---

<Functions.ReviewerStatus />

### size

---

<Functions.Size />

### title

---

<Functions.Title />

### workflowStatus

---

<Functions.WorkflowStatus />

## Organization

---

Set of functions to get organization details.

### organization

---

<Functions.Organization />

### team

---

<Functions.Team />

## User

Set of functions to get user details.

### issueCountBy

---

<Functions.IssueCountBy />

### pullRequestCountBy

---

<Functions.PullRequestCountBy />

### totalCodeReviews

---

<Functions.TotalCodeReviews />

### totalCreatedPullRequests

---

<Functions.TotalCreatedPullRequests />

## Utilities

---

Set of functions to help handle the queried data.

### all

---

<Functions.All />

### any

---

<Functions.Any />

### append

---

<Functions.Append />

### contains

---

<Functions.Contains />

### isElementOf

---

<Functions.IsElementOf />

### length

---

<Functions.Length />

### sprintf

---

<Functions.Sprintf />

### startsWith

---

<Functions.StartsWith />

## Engine

---

Set of functions used to handle `reviewpad.yml` file.

This functions should be used to access and handle data declared into `reviewpad.yml`, e.g. `$group` to get a defined group.

### group

---

<Functions.Group />

### rule

---

<Functions.Rule />

## Actions

---

### addLabel

---

<Actions.AddLabel />

### addToProject

---

<Actions.AddToProject />

### assignAssignees

---

<Actions.AssignAssignees />

### assignRandomReviewer

---

<Actions.AssignRandomReviewer />

### assignReviewer

---

<Actions.AssignReviewer />

### assignTeamReviewer

---

<Actions.AssignTeamReviewer />

### close

---

<Actions.Close />

### comment

---

<Actions.Comment />

### commentOnce

---

<Actions.CommentOnce />

### commitLint

---

<Actions.CommitLint />

### deleteHeadBranch

---

<Actions.DeleteHeadBranch />

### disableActions

---

<Actions.DisableActions />

### error

---

<Actions.Error />

### fail

---

<Actions.Fail />

### info

---

<Actions.Info />

### merge

---

<Actions.Merge />

### removeLabel

---

<Actions.RemoveLabel />

### removeLabels

---

<Actions.RemoveLabels />

### review

---

<Actions.Review />

### titleLint

---

<Actions.TitleLint />

### warn

---

<Actions.Warn />
